--- a/languages/tribe-ext-show-cost-field.pot
+++ b/languages/tribe-ext-show-cost-field.pot
@@ -2,18 +2,18 @@
 msgid ""
 msgstr ""
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
-"Project-Id-Version: [Base Plugin Name] Extension: [Extension Name]\n"
-"POT-Creation-Date: 2018-02-14 13:59-0600\n"
-"PO-Revision-Date: 2018-02-14 13:58-0600\n"
+"Project-Id-Version: Event Tickets/Eventbrite Extension: Show Cost Field\n"
+"POT-Creation-Date: 2018-04-01 08:12-0500\n"
+"PO-Revision-Date: 2018-04-01 08:12-0500\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.4\n"
+"X-Generator: Poedit 2.0.6\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
-"X-Poedit-WPHeader: extension-template.php\n"
+"X-Poedit-WPHeader: tribe-ext-show-cost-field.php\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
 "esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
@@ -21,12 +21,26 @@ msgstr ""
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
 
+#: tribe-ext-show-cost-field.php:120
+#, php-format
+msgid ""
+"%s requires PHP version %s or newer to work. Please contact your website "
+"host and inquire about updating PHP."
+msgstr ""
+
 #. Plugin Name of the plugin/theme
-msgid "[Base Plugin Name] Extension: [Extension Name]"
+msgid "Event Tickets/Eventbrite Extension: Show Cost Field"
+msgstr ""
+
+#. Plugin URI of the plugin/theme
+msgid "https://github.com/mt-support/tribe-ext-show-cost-field"
 msgstr ""
 
 #. Description of the plugin/theme
-msgid "[Extension Description]"
+msgid ""
+"Force displaying The Events Calendar's \"Event Cost\" field in wp-admin and "
+"the Community Events event edit form (if applicable) when Event Tickets or "
+"Eventbrite Tickets is activated."
 msgstr ""
 
 #. Author of the plugin/theme
